--- a/index.html
+++ b/index.html
@@ -144,6 +144,23 @@
 
   </div>
 
+    <!-- Signup Form -->
+  <div id="signupForm" class="auth-form">
+    <h2>Sign Up</h2>
+    <input type="email" id="signupEmail" placeholder="Email" />
+    <input type="password" id="signupPassword" placeholder="Password" />
+    <button onclick="signup()">Sign Up</button>
+    <p>Already have an account? <span onclick="showLoginForm()">Log in</span></p>
+  </div>
+
+  <!-- Login Form -->
+  <div id="loginForm" class="auth-form">
+    <h2>Log In</h2>
+    <input type="email" id="loginEmail" placeholder="Email" />
+    <input type="password" id="loginPassword" placeholder="Password" />
+    <button onclick="login()">Log In</button>
+    <p>Don't have an account? <span onclick="showSignupForm()">Sign up</span></p>
+  </div>
 
 
   <!-- letter containers -->
@@ -152,7 +169,7 @@
 
     <h2>What is this?</h2>
 
-    <p> hi this is a wip work in progress
+    <p> hi this is a work in progress
     </p>
 
     
@@ -262,23 +279,7 @@
   const analytics = getAnalytics(app);
 </script>
 
-<!-- Signup Form -->
-<div id="signupForm" class="auth-form">
-  <h2>Sign Up</h2>
-  <input type="email" id="signupEmail" placeholder="Email" />
-  <input type="password" id="signupPassword" placeholder="Password" />
-  <button onclick="signup()">Sign Up</button>
-  <p>Already have an account? <span onclick="showLoginForm()">Log in</span></p>
-</div>
 
-<!-- Login Form -->
-<div id="loginForm" class="auth-form">
-  <h2>Log In</h2>
-  <input type="email" id="loginEmail" placeholder="Email" />
-  <input type="password" id="loginPassword" placeholder="Password" />
-  <button onclick="login()">Log In</button>
-  <p>Don't have an account? <span onclick="showSignupForm()">Sign up</span></p>
-</div>
 
 
 <script>
